--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -48,6 +48,20 @@
           flex: 1 1 80%;
   padding: 20px;
   background-color: #353c50;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.results-section .loader {
+  font-size: 30px;
+  margin-bottom: 170px;
 }
 
 .results-container {
@@ -105,5 +119,55 @@
 
 .pagination button:first-child {
   left: 5px;
+}
+
+.pagination span {
+  position: absolute;
+  top: 215px;
+  left: 50px;
+  border-radius: 50%;
+  background-color: #23262e;
+  width: 50px;
+  height: 50px;
+  font-size: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.detail-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80%;
+  margin-bottom: 170px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.detail-section h2 {
+  text-transform: uppercase;
+}
+
+.detail-section img {
+  width: 200px;
+}
+
+.detail-section p {
+  font-size: 30px;
 }
 /*# sourceMappingURL=App.css.map */
