--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -31,6 +31,13 @@
   flex: 1 1 80%;
   padding: 20px;
   background-color: #353c50;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .loader {
+    font-size: 30px;
+    margin-bottom: 170px;
+  }
 }
 
 .results-container {
@@ -73,5 +80,36 @@
     &:first-child {
       left: 5px;
     }
+  }
+  & span {
+    position: absolute;
+    top: 215px;
+    left: 50px;
+    border-radius: 50%;
+    background-color: #23262e;
+    width: 50px;
+    height: 50px;
+    font-size: 22px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.detail-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
+  margin-bottom: 170px;
+  flex-direction: column;
+  & h2 {
+    text-transform: uppercase;
+  }
+  & img {
+    width: 200px;
+  }
+  & p {
+    font-size: 30px;
   }
 }
